--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ h1 {
 header {
     background-color: #fff0db;
     width: 100%;
+    height: 150px;
     position: fixed;
     padding: 0;
     display: flex;
@@ -37,7 +38,7 @@ header a {
     text-decoration: none;
 }
 #menu {
-    font-size: 30px;
+    font-size: 25px;
     
 }
 #menu > li {
@@ -45,11 +46,11 @@ header a {
     display: inline;
     justify-content: flex-end;
     list-style-type: none;
-    padding-right: 50px;
-    padding-left: 50px;
+    padding-right: 25px;
+    padding-left: 25px;
 }
 #menu a {
-    padding: 13px 30px;
+    padding: 15px 30px;
     display: inline-block;
     font-weight: bold;
     background-color: purple;
@@ -63,4 +64,10 @@ header a {
 }
 .active {
     font-family: "Sigmar", sans-serif;
+}
+
+/* Main content */
+#icon {
+    text-align: center;
+    margin-top: 150px;
 }
