--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,15 +14,14 @@ body {
     color: black;
     font-family: "Playfair Display", serif;
 }
-h1 {
+h1, h2, h3 {
     font-family: "Sigmar", sans-serif;
 }
 /* Header */
 header {
-    background-color: #fff0db;
+    background-color: #032f3c;
     width: 100%;
     height: 150px;
-    position: fixed;
     padding: 0;
     display: flex;
     justify-content: space-between;
@@ -55,19 +54,50 @@ header a {
     font-weight: bold;
     background-color: white;
     color: #FFBF00;
-    border: 1px solid black;
+    border: 1px  black;
     box-shadow: 0 2px 2px black;
      
 }
 #menu a:hover {
-    background-color: #67B7D1;
+    background-color: #046169;
 }
 .active {
     font-family: "Sigmar", sans-serif;
 }
 
 /* Main content */
+.text-center {
+    text-align: center;
+    color: #032f3c;
+}
+    
 #icon {
     text-align: center;
-    margin-top: 150px;
+    margin-top: 90px;
 }
+
+h2 {
+    font-size: 40px;
+}
+h3 {
+    font-size: 30px;
+}
+.blocks {
+    /* Makes i t responsive without using media-query */
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 10px;
+}
+
+.blocks div {
+        text-align: center;
+        font-size: 20px;
+        background-color: #032f3c;
+        /* Each div will expand to fill the space in its rows */
+        padding: 10px;
+        flex-basis: 200px;
+        flex-grow: 1;
+        border: 2px solid white;
+        color: white;
+        margin: 20px;
+    }
