--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ header a {
     color: #FFBF00;
     border: 1px  black;
     box-shadow: 0 2px 2px black;
+    border-radius: 5px;
      
 }
 #menu a:hover {
@@ -64,13 +65,13 @@ header a {
 .active {
     font-family: "Sigmar", sans-serif;
 }
-
+/* Home Page */ 
 /* Main content */
 .text-center {
     text-align: center;
     color: #032f3c;
 }
-    
+   
 #icon {
     text-align: center;
     margin-top: 40px;
@@ -106,8 +107,42 @@ h3 {
     font-size: 20px;
     color: #FFBF00;
     font-family: "Sigmar", sans-serif;
+    border-radius: 5px;
 }
 .blocks button:hover {
     background-color: #046169;
     
+}
+
+/* Play Game Page */
+/* Main */
+#play {
+    margin: 30px auto;
+}
+.score-board {
+    border: 4px solid #032f3c;
+    width: 400px;
+    margin: 50px auto;
+    padding: 30px;
+    font-size: 45px;
+    border-radius: 5px;
+    text-align: center;
+    position: relative;
+}
+.label {
+    background: red;
+    color: white;
+    font-size: 30px;
+    padding: 5px 10px;
+    font-family: "Sigmar", sans-serif;
+}
+#user-label {
+    position: absolute;
+    top: 30px;
+    left: -50px;
+}
+#computer-label {
+    position: absolute;
+    top: 30px;
+    right: -110px;
 }
