Cached the DOM and added event listeners to the icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ h3 {
     width: 100%;
 }
 .option:hover {
-    background: red;
+    background: #FFBF00;
 }
 #message {
     text-align: center;
