--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,5 +190,40 @@ h3 {
     justify-content: center;
 }
 #result > p {
+    text-align: center;
+    height: auto;
+    width: 500px;
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 10px;
+}
+#game-area {
+    display: flex;
+    justify-content: center;
+    margin: 80px 50px;
+}
+.select-game > p {
+    text-align: center;
+    margin: 0;
     
 }
+#player-image {
+    border: 2px solid black;
+    border-radius: 80px;
+    margin: 0 10px 0 10px;
+    height: 160px;
+    width: 160px;
+}
+
+#computer-image {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    border: 2px solid black;
+    border-radius: 80px;
+    margin: 0 10px 0 10px;
+    height: 160px;
+    width: 160px;
+}
+
