--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,37 +20,35 @@ h1, h2, h3 {
 /* Header */
 header {
     background-color: #032f3c;
-    width: 100%;
-    height: 150px;
-    padding: 0;
     display: flex;
+    padding: 0;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    height: 80px;
     z-index: 99;   
 }
 #logo {
-    width: 15%;
-    padding: 1%;
+    width: 20%;
+    padding: 3%;
 }
 
 header a {
     text-decoration: none;
 }
 #menu {
-    font-size: 25px;
+    font-size: 10px;
     
 }
 #menu > li {
+    display: inline-block;
     margin-bottom: 0.5em;
-    display: inline;
-    justify-content: flex-end;
     list-style-type: none;
-    padding-right: 25px;
-    padding-left: 25px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 #menu a {
-    padding: 15px 30px;
-    display: inline-block;
+    padding: 5px 15px;
     font-weight: bold;
     background-color: white;
     color: #FFBF00;
@@ -67,21 +65,30 @@ header a {
 }
 /* Home Page */ 
 /* Main content */
+main {
+    flex: 1 0 auto;
+    margin-top: 60px;
+}
 .text-center {
     text-align: center;
     color: #032f3c;
 }
    
-#icon {
+#icon > img {
+    width: 65%;
     text-align: center;
     margin-top: 40px;
+    margin-left: 80px;
+}
+h1 > p {
+    font-size: 20px;
 }
 
 h2 {
-    font-size: 40px;
+    font-size: 25px;
 }
 h3 {
-    font-size: 30px;
+    font-size: 25px;
 }
 .blocks {
     /* Makes it responsive without using media-query */
@@ -103,8 +110,8 @@ h3 {
         margin: 20px;
     }
 .blocks button {
-    padding: 10px;
-    font-size: 20px;
+    padding: 8px;
+    font-size: 15px;
     color: #FFBF00;
     font-family: "Sigmar", sans-serif;
     border-radius: 5px;
@@ -116,6 +123,12 @@ h3 {
 
 /* Play Game Page */
 /* Main */
+#play  {
+    margin: 30px auto;
+    font-size: 40px;
+
+}
+    
 /* Styling the start and reset buttons */
 #button-container {
     display: flex;
@@ -127,22 +140,20 @@ h3 {
     margin: 5px;
 }
 #start , #reset {
-    padding: 10px;
+    padding: 8px;
     border: 2px solid black;
     background: grey;
     color: white;
     border-radius: 5px;
-    font-size: 15px;
+    font-size: 12px;
 }
-#play {
-    margin: 30px auto;
-}
+
 .score-board {
     border: 4px solid #032f3c;
-    width: 400px;
-    margin: 50px auto;
+    width: 200px;
+    margin: 30px auto;
     padding: 30px;
-    font-size: 45px;
+    font-size: 35px;
     border-radius: 5px;
     text-align: center;
     position: relative;
@@ -150,30 +161,30 @@ h3 {
 .label {
     background: red;
     color: white;
-    font-size: 30px;
+    font-size: 15px;
     padding: 5px 10px;
     font-family: "Sigmar", sans-serif;
 }
 #user-label {
     position: absolute;
     top: 30px;
-    left: -50px;
+    left: -30px;
 }
 #computer-label {
     position: absolute;
     top: 30px;
-    right: -110px;
+    right: -60px;
 }
 
 .options {
     text-align: center;
-    margin: 30px 0;
+    margin: 30px 10px;
     background-color: #ffff8f;
    
 }
 .option {
     display:inline-block;
-    padding: 30px;
+    padding: 15px;
     border: 5px solid #ffff8f;
     border-radius: 50%;
     transition: all 0.3s ease;
@@ -191,16 +202,17 @@ h3 {
 }
 #result > p {
     text-align: center;
-    height: auto;
-    width: 500px;
+    height: 100px;
+    width: 300px;
     border: 2px solid black;
     border-radius: 5px;
-    padding: 10px;
+    padding: 30px;
+    font-size: 20px;
 }
 #game-area {
     display: flex;
     justify-content: center;
-    margin: 80px 50px;
+    margin: 80px 70px;
 }
 .select-game > p {
     text-align: center;
@@ -208,11 +220,11 @@ h3 {
     
 }
 #player-image {
-    border: 2px solid black;
+    border: 2px solid #032f3c;
     border-radius: 80px;
     margin: 0 10px 0 10px;
-    height: 160px;
-    width: 160px;
+    height: 150px;
+    width: 150px;
 }
 
 #computer-image {
@@ -220,10 +232,53 @@ h3 {
     flex-wrap: wrap;
     align-content: center;
     justify-content: center;
-    border: 2px solid black;
+    border: 2px solid #032f3c;
     border-radius: 80px;
     margin: 0 10px 0 10px;
-    height: 160px;
-    width: 160px;
+    height: 150px;
+    width: 150px;
+}
+/* Adding media query for tablets and larger screens of 768 px and up */
+@media  screen and (min-width: 768px) {
+    /* Home Page */
+header {
+    height: 100px;
+}    
+#menu {
+    font-size: 23px;
+}
+h1 > p {
+    font-size: 30px;
+}
+#icon > img {
+    margin-left: 120px;
+}
+/* Game page styling */
+#start-button , #reset-button {
+    display: inline-block;
+    margin: 10px;
+}
+#start , #reset {
+    padding: 10px;
+    font-size: 15px;
+}
+.score-board {
+    width: 300px;
+    font-size: 35px;
+    
+}
+.label {
+    font-size: 25px;
+}
+#user-label {
+    left: -40px;
+}
+#computer-label {
+    right: -90px;
 }
 
+
+}
+    
+
+    
