--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,9 +276,29 @@ h1 > p {
 #computer-label {
     right: -90px;
 }
-
-
 }
+/* Adding media query for larger screens (Laptops and desktops 992 px and up) */
+@media screen and (min-width: 992px) {
+    /* Home page */
+    #logo {
+        width: 15%;
+    }
+    #icon > img {
+        margin-left: 250px;
+        width: 50%;
+    }
+    /* Game page styling */
+    .score-board {
+        width: 500px;
+    }   
+}
+/* Large screens (laptops and desktops, 1200px and up) */
+@media screen and (min-width: 1200px){
+    #icon > img {
+        margin-left: 450px;
+    }
+}
+
     
 
     
