--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ header a {
     padding: 5px 15px;
     font-weight: bold;
     background-color: white;
-    color: #FFBF00;
+    color: #FF2800;
     border: 1px  black;
     box-shadow: 0 2px 2px black;
     border-radius: 5px;
@@ -80,10 +80,6 @@ main {
     margin-top: 40px;
     margin-left: 80px;
 }
-h1 > p {
-    font-size: 20px;
-}
-
 h2 {
     font-size: 25px;
 }
@@ -112,7 +108,7 @@ h3 {
 .blocks button {
     padding: 8px;
     font-size: 15px;
-    color: #FFBF00;
+    color: #FF2800;
     font-family: "Sigmar", sans-serif;
     border-radius: 5px;
 }
@@ -299,6 +295,9 @@ h1 > p {
     }
     #result > p {
         height: 120px;
+    }
+    h2 {
+        font-size: 25px;
     }
 }
 
