Change updated to improve accessibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,8 +141,7 @@ h3 {
 #start , #reset {
     padding: 8px;
     border: 2px solid black;
-    background: #89CFF0;
-    color: black;
+    color: blue;
     border-radius: 5px;
     font-size: 12px;
     font-weight: bold;
