--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ header a {
 /* Main content */
 main {
     flex: 1 0 auto;
-    margin-top: 60px;
+    margin-top: 30px;
 }
 .text-center {
     text-align: center;
@@ -123,7 +123,7 @@ h3 {
 /* Play Game Page */
 /* Main */
 #play  {
-    margin: 30px auto;
+    margin: 10px auto;
     font-size: 40px;
 
 }
@@ -150,8 +150,8 @@ h3 {
 .score-board {
     border: 4px solid #032f3c;
     width: 200px;
-    margin: 30px auto;
-    padding: 30px;
+    margin: 10px auto;
+    padding: 20px;
     font-size: 35px;
     border-radius: 5px;
     text-align: center;
@@ -183,9 +183,10 @@ h3 {
 }
 .option {
     display:inline-block;
-    padding: 15px;
+    padding: 10px;
     border: 5px solid #ffff8f;
     border-radius: 50%;
+    width: 25%;
     transition: all 0.3s ease;
 }
 .option > img {
@@ -201,11 +202,11 @@ h3 {
 }
 #result > p {
     text-align: center;
-    height: 100px;
+    height: 80px;
     width: 300px;
     border: 2px solid black;
     border-radius: 5px;
-    padding: 30px;
+    padding: 20px;
     font-size: 20px;
 }
 #game-area {
@@ -269,6 +270,7 @@ h1 > p {
 .score-board {
     width: 300px;
     font-size: 35px;
+    padding: 30px;
     
 }
 .label {
@@ -280,6 +282,15 @@ h1 > p {
 #computer-label {
     right: -90px;
 }
+.option {
+    width: 20%; 
+}
+#result > p {
+    height: 100px;
+    width: 300px;
+    padding: 30px;
+}
+
 }
 /* Adding media query for larger screens (Laptops and desktops 992 px and up) */
 @media screen and (min-width: 992px) {
@@ -294,7 +305,18 @@ h1 > p {
     /* Game page styling */
     .score-board {
         width: 500px;
-    }   
+    } 
+    .option {
+        width: 15%; 
+    }
+    #result > p {
+        height: 150px;
+        width: 300px;
+        padding: 40px;
+        font-size: 20px;
+    }
+     
+
 }
 /* Large screens (laptops and desktops, 1200px and up) */
 @media screen and (min-width: 1200px){
@@ -304,9 +326,11 @@ h1 > p {
     #result > p {
         height: 120px;
     }
-    h2 {
-        font-size: 25px;
+    /* Game page styling */
+    .option {
+        width: 10%;
     }
+         
 }
 
     
