Updated the CSS styling for message area for desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,7 +326,12 @@ h1 > p {
     /* Game page styling */
     .option {
         width: 10%;
-    }       
+    }    
+    #result > p {
+        height: 150px;
+        width: 300px;
+        padding: 50px;
+        font-size: 20px;   
 }
 
     
